--- a/ansible/roles/commonwkstn/tasks/main.yml
+++ b/ansible/roles/commonwkstn/tasks/main.yml
@@ -12,7 +12,7 @@
     log_path: C:\dns_log.txt
 
 - name: "Add workstation to {{member_domain}}"
-  win_domain_membership:
+  microsoft.ad.membership:
     dns_domain_name: "{{member_domain}}"
     domain_admin_user: "{{domain_username}}"
     domain_admin_password: "{{domain_password}}"
