--- a/ansible/roles/domain_controller/tasks/main.yml
+++ b/ansible/roles/domain_controller/tasks/main.yml
@@ -8,7 +8,7 @@
   when: two_adapters
 
 - name: Ensure that domain exists
-  win_domain:
+  microsoft.ad.domain:
     domain_netbios_name: "{{netbios_name}}"
     dns_domain_name: "{{domain}}"
     safe_mode_password: "{{domain_password}}"
@@ -21,7 +21,7 @@
   when: check_domain.changed
 
 - name: Ensure the server is a domain controller
-  win_domain_controller:
+  microsoft.ad.domain_controller:
     dns_domain_name: "{{domain}}"
     domain_admin_user: "{{domain_username}}"
     domain_admin_password: "{{domain_password}}"
@@ -73,16 +73,30 @@
     name: ActiveDirectoryDSC
     state: present
 
+# - name: Ensure Administrator is part of Enterprise Admins
+#   win_domain_group_membership:
+#     name: "Enterprise Admins"
+#     members:
+#       - Administrator
+#     state: present
+
+# - name: Ensure Administrator is part of Domain Admins
+#   win_domain_group_membership:
+#     name: "Domain Admins"
+#     members:
+#       - Administrator
+#     state: present
+
 - name: Ensure Administrator is part of Enterprise Admins
-  win_domain_group_membership:
-    name: "Enterprise Admins"
-    members:
-      - Administrator
-    state: present
+  ansible.windows.win_shell: |
+    Add-ADGroupMember -Identity "Enterprise Admins" -Members "Administrator"
+  args:
+    executable: PowerShell
+  ignore_errors: yes
 
 - name: Ensure Administrator is part of Domain Admins
-  win_domain_group_membership:
-    name: "Domain Admins"
-    members:
-      - Administrator
-    state: present
+  ansible.windows.win_shell: |
+    Add-ADGroupMember -Identity "Domain Admins" -Members "Administrator"
+  args:
+    executable: PowerShell
+  ignore_errors: yes
