--- a/ansible/roles/member_server/tasks/main.yml
+++ b/ansible/roles/member_server/tasks/main.yml
@@ -18,7 +18,7 @@
     include_management_tools: True
 
 - name: "Add member server"
-  win_domain_membership:
+  microsoft.ad.membership:
     dns_domain_name: "{{member_domain}}"
     domain_admin_user: "{{domain_username}}"
     domain_admin_password: "{{domain_password}}"
